// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repository table row component renders a symlink table row 1`] = `
<tr
  class="tree-item"
>
  <td
    class="cursor-default position-relative tree-item-file-name"
  >
    <a
      class="str-truncated tree-item-link"
      data-testid="file-name-link"
      href="https://test.com"
      title="test"
    >
      <file-icon-stub
        class="mr-1 position-relative text-secondary"
        cssclasses="position-relative file-icon"
        filemode="120000"
        filename="test"
        size="16"
      />
      <span
        class="position-relative"
      >
        test
      </span>
    </a>
    <gl-icon-stub
      class="ml-1"
      name="lock"
      size="12"
      title="Locked by Root"
    />
  </td>
  <td
    class="cursor-default d-none d-sm-table-cell tree-commit"
  >
    <gl-link-stub
      class="gl-text-gray-600 str-truncated-100 tree-commit-link"
    />
    <gl-intersection-observer-stub />
  </td>
  <td
    class="cursor-default gl-text-gray-600 text-right tree-time-ago"
  >
    <gl-intersection-observer-stub>
      <timeago-tooltip-stub
        cssclass=""
        datetimeformat="asDateTime"
        time="2019-01-01"
        tooltipplacement="top"
      />
    </gl-intersection-observer-stub>
  </td>
</tr>
`;

exports[`Repository table row component renders table row 1`] = `
<tr
  class="tree-item"
>
  <td
    class="cursor-default position-relative tree-item-file-name"
  >
    <a
      class="str-truncated tree-item-link"
      data-testid="file-name-link"
      href="https://test.com"
      title="test"
    >
      <file-icon-stub
        class="mr-1 position-relative text-secondary"
        cssclasses="position-relative file-icon"
        filemode=""
        filename="test"
        size="16"
      />
      <span
        class="position-relative"
      >
        test
      </span>
    </a>
    <gl-icon-stub
      class="ml-1"
      name="lock"
      size="12"
      title="Locked by Root"
    />
  </td>
  <td
    class="cursor-default d-none d-sm-table-cell tree-commit"
  >
    <gl-link-stub
      class="gl-text-gray-600 str-truncated-100 tree-commit-link"
    />
    <gl-intersection-observer-stub />
  </td>
  <td
    class="cursor-default gl-text-gray-600 text-right tree-time-ago"
  >
    <gl-intersection-observer-stub>
      <timeago-tooltip-stub
        cssclass=""
        datetimeformat="asDateTime"
        time="2019-01-01"
        tooltipplacement="top"
      />
    </gl-intersection-observer-stub>
  </td>
</tr>
`;

exports[`Repository table row component renders table row for path with special character 1`] = `
<tr
  class="tree-item"
>
  <td
    class="cursor-default position-relative tree-item-file-name"
  >
    <a
      class="str-truncated tree-item-link"
      data-testid="file-name-link"
      href="https://test.com"
      title="test"
    >
      <file-icon-stub
        class="mr-1 position-relative text-secondary"
        cssclasses="position-relative file-icon"
        filemode=""
        filename="test"
        size="16"
      />
      <span
        class="position-relative"
      >
        test
      </span>
    </a>
    <gl-icon-stub
      class="ml-1"
      name="lock"
      size="12"
      title="Locked by Root"
    />
  </td>
  <td
    class="cursor-default d-none d-sm-table-cell tree-commit"
  >
    <gl-link-stub
      class="gl-text-gray-600 str-truncated-100 tree-commit-link"
    />
    <gl-intersection-observer-stub />
  </td>
  <td
    class="cursor-default gl-text-gray-600 text-right tree-time-ago"
  >
    <gl-intersection-observer-stub>
      <timeago-tooltip-stub
        cssclass=""
        datetimeformat="asDateTime"
        time="2019-01-01"
        tooltipplacement="top"
      />
    </gl-intersection-observer-stub>
  </td>
</tr>
`;
